--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,6 @@
 @import 'tailwindcss';
 @import 'fumadocs-ui/css/neutral.css';
 @import 'fumadocs-ui/css/preset.css';
+
+@import './shadcn.css';
+@import './ui.css'
