--- a/src/css/shadcn.css
+++ b/src/css/shadcn.css
@@ -137,3 +137,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 0rem;
+  @apply max-w-7xl;
+}
