--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,14 @@
 @import 'tailwindcss';
 @import 'fumadocs-ui/css/neutral.css';
 @import 'fumadocs-ui/css/preset.css';
-
+@import "fumadocs-twoslash/twoslash.css";
 @import './shadcn.css';
 @import "./blog.css";
+
+
+@theme {
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+}
+
+@source '../../node_modules/fumadocs-ui/dist/**/*.js';
