--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,7 @@
 @import 'fumadocs-ui/css/preset.css';
 @import "fumadocs-twoslash/twoslash.css";
 @import './shadcn.css';
-@import "./blog.css";
+@import "../fumadocs/css/blog.css";
 
 
 @theme {
