--- a/src/fumadocs/css/blog.css
+++ b/src/fumadocs/css/blog.css
@@ -22,7 +22,6 @@
     background-repeat: repeat;
     background-image: url("/hero-grid-light.svg");
   }
-
   .dark {
     .grid-magicpattern {
       width: 100%;
@@ -49,4 +48,10 @@
     );
     background-size: 0.25rem 0.25rem;
   }
+}
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 0rem;
+  @apply max-w-7xl;
 }
