--- a/src/css/shadcn.css
+++ b/src/css/shadcn.css
@@ -35,6 +35,9 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  /* 自定义 */
+  --bg: var(--color-neutral-50);
+
 }
 
 .dark {
@@ -69,6 +72,8 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.439 0 0);
+  /* 自定义 */
+   --bg: var(--color-black);
 }
 
 @theme inline {
