--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,3 +12,109 @@
 }
 
 @source '../../node_modules/fumadocs-ui/dist/**/*.js';
+
+
+/* animation */
+
+.set-fade {
+  opacity: 0;
+
+  @media (prefers-reduced-motion) {
+    opacity: 1;
+  }
+}
+.fade {
+  animation: fade 0.3s forwards;
+  opacity: 0;
+
+  &.fade-sm {
+    animation-duration: 0.1s;
+  }
+
+  &.fade-lg {
+    animation-duration: 0.5s;
+  }
+
+  @media (prefers-reduced-motion) {
+    animation: none;
+  }
+}
+@keyframes fade {
+  to {
+    opacity: 1;
+  }
+}
+
+.set-reveal {
+  opacity: 0;
+  transform: translateY(0px);
+
+  @media (prefers-reduced-motion) {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+.reveal {
+  animation: reveal 0.8s cubic-bezier(0.3, 0, 0, 1) forwards;
+  opacity: 0;
+  transform: translateY(40px);
+
+  &.reveal-xs {
+    animation-duration: 0.25s;
+    transform: translateY(10px);
+  }
+
+  &.reveal-sm {
+    animation-duration: 0.5s;
+    transform: translateY(30px);
+  }
+
+  &.reveal-lg {
+    animation-duration: 1.2s;
+    transform: translateY(50px);
+  }
+
+  &.reveal-reverse {
+    animation-duration: 0.4s;
+    transform: translateY(-10px);
+  }
+
+  @media (prefers-reduced-motion) {
+    animation: none;
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes reveal {
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+.set-scaleFade {
+  opacity: 0;
+  transform: scale(0);
+
+  @media (prefers-reduced-motion) {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+.scaleFade {
+  animation: scaleFade 0.5s var(--ease-bounce) forwards;
+  opacity: 0;
+  transform: scale(0.75);
+
+  @media (prefers-reduced-motion) {
+    animation: none;
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes scaleFade {
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
