feat(post): 新增文章 - (react query 系列) :sparkles:

--- a/src/fumadocs/css/blog.css
+++ b/src/fumadocs/css/blog.css
@@ -13,6 +13,12 @@
   }
 }
 
+:is(html.light) .blog #nd-page article {
+  --color-fd-card: #fafafa;
+  --color-fd-secondary: #ededed80;
+}
+
+
 @layer utilities {
   .grid-magicpattern {
     width: 100%;
